Revert "검색완료"
This reverts commit 4af8608ad07918af133c5696c515499ab6c69b66.